WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134464
All Indic text is rendered as boxes on iOS
https://bugs.webkit.org/show_bug.cgi?id=134464
Summary
All Indic text is rendered as boxes on iOS
Myles C. Maxfield
Reported
2014-06-30 15:40:53 PDT
All Indic text is rendered as boxes on iOS
Attachments
Patch
(7.72 KB, patch)
2014-06-30 16:03 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(26.57 KB, patch)
2014-06-30 17:05 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-06-30 16:03:26 PDT
Created
attachment 234110
[details]
Patch
Myles C. Maxfield
Comment 2
2014-06-30 16:04:00 PDT
Uploaded patch before I had generated all the platform-specific expected results in order to give people more reviewing time
Myles C. Maxfield
Comment 3
2014-06-30 16:04:39 PDT
<
rdar://problem/17453032
>
Darin Adler
Comment 4
2014-06-30 16:17:04 PDT
Comment on
attachment 234110
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234110&action=review
Where’s the actual fix? It looks like it’s mixed in with many small non-behavior-changing changes, specifically changing all the <= to < in the languageSpecificFallbackFont function. Would be nice to separate those from the bug fix for clarity. It seems like you fixed more than just Indic here. I’m not sure the test sufficiently covers the changes.
> LayoutTests/ChangeLog:11 > + * platform/ios-sim/fast/text/indic-expected.txt: Added.
No results for any other platforms? Won’t this cause problems?
Darin Adler
Comment 5
2014-06-30 16:17:30 PDT
Comment on
attachment 234110
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234110&action=review
>> LayoutTests/ChangeLog:11 >> + * platform/ios-sim/fast/text/indic-expected.txt: Added. > > No results for any other platforms? Won’t this cause problems?
I see you commented on this already.
Darin Adler
Comment 6
2014-06-30 16:18:23 PDT
rs=me to land a first patch that simply changes all <= to < so we can see a rebased patch that shows only the actual changes; or you could leave all existing <= in that form and change to < in a subsequent patch
Myles C. Maxfield
Comment 7
2014-06-30 17:05:10 PDT
Created
attachment 234123
[details]
Patch
Myles C. Maxfield
Comment 8
2014-06-30 17:27:18 PDT
http://trac.webkit.org/changeset/170619
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug